# gov3rnment

./: .gitignore  Cargo.toml  README.md  gov_table.db3
src/: command.rs  handler.rs  main.rs
src/args/: arg_parser.rs
src/command/: audio.rs  base_command.rs  command_repo.rs  demo.rs
src/command/audio/: audio_wrap.rs  youtube.rs
src/command/demo/: ping.rs  pushup.rs
src/command/hunor/: mod.rs  scream.rs
src/command/image/: image_loader.rs  mod.rs  pixelsort.rs
src/command/trivia/: mod.rs  solo_trivia.rs  trivia_fetcher.rs  trivia_record.rs
src/db/: mod.rs  repo.rs
