[package]
name = "gov3rnment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12.0", git = "https://github.com/serenity-rs/serenity.git", features = [ "client", "standard_framework", "voice" ] }
tokio = { version = "1.21.2", features = [ "macros", "rt-multi-thread" ] }
songbird = "0.4.0"


